# NodeMCU-App

./: package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: check.yml  release.yml
src/: App.svelte  Main.svelte  global.ts  styles.css  type.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/database/: flow.rs  mod.rs
src/lib/: Card.svelte  Chart.svelte  Footer.svelte  Gyro.svelte  Header.svelte  Location.svelte  Notif.svelte  Radial.svelte  Status.svelte  Title.svelte  notification.ts
